--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,31 @@
 repos:
-  - repo: https://github.com/psf/black
-    rev: 22.3.0
-    hooks:
-      - id: black
-        language_version: python3
-  - repo: https://github.com/pre-commit/mirrors-clang-format
-    rev: v18.1.7
-    hooks:
-    - id: clang-format
-      types_or: [c++, c]
-      args: [-style=file, -i]
-  - repo: https://github.com/espressif/check-copyright/
-    rev: v1.0.3
-    hooks:
-      - id: check-copyright
-        args: ['--config', '.github/check-spdx.yaml']
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
+    rev: v4.6.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-      - id: check-added-large-files
+      - id: check-yaml
+      - id: check-merge-conflict
+      - id: debug-statements
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.6.8
+    hooks:
+      - id: ruff
+        args: ["--fix", "--exit-non-zero-on-fix"]
+      - id: ruff-format
+
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.407
+    hooks:
+      - id: pyright
+
+  - repo: local
+    hooks:
+      - id: pytest-collect
+        name: pytest --collect-only
+        entry: pytest --collect-only -q
+        language: system
+        types: [python]
+        pass_filenames: false
+        stages: [manual]
