--- a/minicpm_o_2_6/pytorch/requirements.txt
+++ b/minicpm_o_2_6/pytorch/requirements.txt
@@ -1,3 +1,4 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
 # MiniCPM-o-2_6 Inference Requirements
 torchaudio @ https://download.pytorch.org/whl/cpu/torchaudio-2.7.1%2Bcpu-cp311-cp311-manylinux_2_28_x86_64.whl ; python_version == "3.11"
 
