Extend model codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @kmabeeTT @AleksKnezevic @mrakitaTT @nvukobratTT @vzeljkovicTT
+* @kmabeeTT @AleksKnezevic @mrakitaTT @nvukobratTT @vzeljkovicTT @vkovinicTT @ppadjinTT
